--- a/benches/Cargo.toml
+++ b/benches/Cargo.toml
@@ -14,6 +14,7 @@ license = "MIT OR Apache-2.0"
 
 [dependencies]
 lightyear = { path = "../lightyear" }
+criterion = { version = "0.3", features = ["html_reports"] }
 crossbeam-channel = "0.5.10"
 anyhow = { version = "1.0.75", features = [] }
 bevy = { version = "0.13", features = ["bevy_core_pipeline"] }
@@ -28,8 +29,8 @@ lz4_flex = { version = "0.11.2", default-features = false }
 
 
 [[bench]]
-name = "spawn"
-path = "spawn.rs"
+name = "replication"
+path = "replication.rs"
 harness = false
 
 [[bench]]
