--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -101,8 +101,9 @@ metrics-exporter-prometheus = { version = "0.13.0", optional = true, default-fea
 
 # bevy
 bevy = { version = "0.14.0-rc.2", default-features = false, features = [
-    "multi_threaded", "bevy_state",
+    "multi_threaded", "bevy_state", "serialize",
 ] }
+bevy_ecs = { version = "0.14.0-rc.2", default-features = false, features = ["serde"] }
 
 # compression
 lz4_flex = { version = "0.11", optional = true, default-features = false, features = [
