--- a/examples/simple_setup/Cargo.toml
+++ b/examples/simple_setup/Cargo.toml
@@ -15,5 +15,8 @@ publish = false
 [dependencies]
 lightyear = { path = "../../lightyear" }
 serde = { version = "1.0.188", features = ["derive"] }
-bevy = { version = "0.13", features = ["bevy_core_pipeline"] }
 clap = { version = "4.5.4", features = ["derive"] }
+bevy = { version = "0.14.0-rc.2", features = [
+    "multi_threaded", "bevy_state", "serialize"
+] }
+bevy_ecs = { version = "0.14.0-rc.2", default-features = false, features = ["serde"] }
