--- a/examples/lobby/Cargo.toml
+++ b/examples/lobby/Cargo.toml
@@ -21,16 +21,19 @@ bevy_egui = "0.25.0"
 egui_extras = "0.26.0"
 leafwing-input-manager = "0.13"
 lightyear = { path = "../../lightyear", features = [
-  "webtransport",
-  "websocket",
-  "leafwing",
-  "steam",
+    "webtransport",
+    "websocket",
+    "leafwing",
+    "steam",
 ] }
 serde = { version = "1.0.188", features = ["derive"] }
 anyhow = { version = "1.0.75", features = [] }
 tracing = "0.1"
 tracing-subscriber = "0.3.17"
-bevy = { version = "0.13", features = ["bevy_core_pipeline"] }
+bevy = { version = "0.14.0-rc.2", features = [
+    "multi_threaded", "bevy_state", "serialize"
+] }
+bevy_ecs = { version = "0.14.0-rc.2", default-features = false, features = ["serde"] }
 derive_more = { version = "0.99", features = ["add", "mul"] }
 rand = "0.8.1"
 metrics-exporter-prometheus = { version = "0.13.0", optional = true }
