--- a/examples/replication_groups/Cargo.toml
+++ b/examples/replication_groups/Cargo.toml
@@ -19,18 +19,22 @@ metrics = ["lightyear/metrics", "dep:metrics-exporter-prometheus"]
 [dependencies]
 lightyear_examples_common = { path = "../common" }
 lightyear = { path = "../../lightyear", features = [
-    "webtransport",
-    "websocket",
-    "steam",
+  "webtransport",
+  "websocket",
+  "steam",
 ] }
 serde = { version = "1.0.188", features = ["derive"] }
 anyhow = { version = "1.0.75", features = [] }
 tracing = "0.1"
 tracing-subscriber = "0.3.17"
 bevy = { version = "0.14.0-rc.2", features = [
-    "multi_threaded", "bevy_state", "serialize"
+  "multi_threaded",
+  "bevy_state",
+  "serialize",
 ] }
-bevy_ecs = { version = "0.14.0-rc.2", default-features = false, features = ["serde"] }
+bevy_ecs = { version = "0.14.0-rc.2", default-features = false, features = [
+  "serde",
+] }
 derive_more = { version = "0.99", features = ["add", "mul"] }
 rand = "0.8.1"
 metrics-exporter-prometheus = { version = "0.13.0", optional = true }
