--- a/examples/spaceships/Cargo.toml
+++ b/examples/spaceships/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "spaceships"
 version = "0.0.0"
-authors = ["Charles Bournhonesque <charlesbour@gmail.com>"]
+authors = ["Charles Bournhonesque <charlesbour@gmail.com>", "Richard Jones <rj@metabrew.com>"]
 edition = "2021"
 rust-version = "1.65"
 publish = false
