--- a/examples/common/Cargo.toml
+++ b/examples/common/Cargo.toml
@@ -14,6 +14,7 @@ exclude = ["/tests"]
 
 [dependencies]
 lightyear = { version = "0.15.1", path = "../../lightyear", features = [
+  "steam",
   "webtransport",
   "websocket",
 ] }
