--- a/examples/simple_box/Cargo.toml
+++ b/examples/simple_box/Cargo.toml
@@ -32,7 +32,7 @@ bevy = { version = "0.14.0-rc.3", features = [
     "serialize",
 ] }
 
-bevy_mod_picking = { version = "0.18.2", features = ["backend_bevy_ui"] }
+bevy_mod_picking = { version = "0.20.0-rc.0", features = ["backend_bevy_ui"] }
 derive_more = { version = "0.99", features = ["add", "mul"] }
 rand = "0.8.1"
 metrics-exporter-prometheus = { version = "0.13.0", optional = true }
