--- a/examples/auth/Cargo.toml
+++ b/examples/auth/Cargo.toml
@@ -27,7 +27,11 @@ serde = { version = "1.0.188", features = ["derive"] }
 anyhow = { version = "1.0.75", features = [] }
 tracing = "0.1"
 tracing-subscriber = "0.3.17"
-bevy = { version = "0.13", features = ["bevy_core_pipeline"] }
+bevy = { version = "0.14.0-rc.3", features = [
+  "multi_threaded",
+  "bevy_state",
+  "serialize",
+] }
 bevy_mod_picking = { version = "0.19.1", features = ["backend_bevy_ui"] }
 derive_more = { version = "0.99", features = ["add", "mul"] }
 rand = "0.8.1"
