--- a/examples/simple_setup/Cargo.toml
+++ b/examples/simple_setup/Cargo.toml
@@ -16,8 +16,8 @@ publish = false
 lightyear = { path = "../../lightyear" }
 serde = { version = "1.0.188", features = ["derive"] }
 clap = { version = "4.5.4", features = ["derive"] }
-bevy = { version = "0.14.0-rc.3", features = [
-  "multi_threaded",
-  "bevy_state",
-  "serialize",
+bevy = { version = "0.14", default-features = false, features = [
+    "multi_threaded",
+    "bevy_state",
+    "serialize",
 ] }
