--- a/examples/auth/Cargo.toml
+++ b/examples/auth/Cargo.toml
@@ -27,14 +27,13 @@ serde = { version = "1.0.188", features = ["derive"] }
 anyhow = { version = "1.0.75", features = [] }
 tracing = "0.1"
 tracing-subscriber = "0.3.17"
-bevy = { version = "0.14", default-features = false, features = [
+bevy = { version = "0.14", features = [
     "multi_threaded",
     "bevy_state",
     "serialize",
 ] }
 bevy_mod_picking = { version = "0.19.1", features = ["backend_bevy_ui"] }
-derive_more = { version = "0.99", features = ["add", "mul"] }
 rand = "0.8.1"
-metrics-exporter-prometheus = { version = "0.13.0", optional = true }
+metrics-exporter-prometheus = { version = "0.15.1", optional = true }
 bevy-inspector-egui = "0.24"
 tokio = "1.37.0"
