--- a/examples/xpbd_physics/Cargo.toml
+++ b/examples/xpbd_physics/Cargo.toml
@@ -25,7 +25,7 @@ serde = { version = "1.0.188", features = ["derive"] }
 anyhow = { version = "1.0.75", features = [] }
 tracing = "0.1"
 tracing-subscriber = "0.3.17"
-bevy = { version = "0.14", default-features = false, features = [
+bevy = { version = "0.14", features = [
     "multi_threaded",
     "bevy_state",
     "serialize",
@@ -33,4 +33,4 @@ bevy = { version = "0.14", default-features = false, features = [
 
 derive_more = { version = "0.99", features = ["add", "mul"] }
 rand = "0.8.1"
-metrics-exporter-prometheus = { version = "0.13.0", optional = true }
+metrics-exporter-prometheus = { version = "0.15.1", optional = true }
