--- a/examples/avian_physics/Cargo.toml
+++ b/examples/avian_physics/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "leafwing_inputs"
+name = "avian_physics"
 version = "0.0.0"
 authors = ["Charles Bournhonesque <charlesbour@gmail.com>"]
 edition = "2021"
@@ -13,12 +13,12 @@ metrics = ["lightyear/metrics", "dep:metrics-exporter-prometheus"]
 lightyear_examples_common = { path = "../common" }
 bevy_screen_diagnostics = "0.5.0"
 leafwing-input-manager = "0.13.3"
-bevy_xpbd_2d = { version = "0.4", features = ["serialize"] }
+avian2d = { version = "0.1", features = ["serialize"] }
 lightyear = { path = "../../lightyear", features = [
     "webtransport",
     "websocket",
     "leafwing",
-    "xpbd_2d",
+    "avian2d",
     "steam",
 ] }
 serde = { version = "1.0.188", features = ["derive"] }
