--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -32,7 +32,7 @@ webtransport = [
     "dep:wasm-bindgen-futures",
 ]
 leafwing = ["dep:leafwing-input-manager"]
-xpbd_2d = ["dep:bevy_xpbd_2d"]
+avian2d = ["dep:avian2d"]
 websocket = [
     "dep:tokio-tungstenite",
     "dep:futures-util",
@@ -66,7 +66,7 @@ seahash = "4.1.0"
 leafwing-input-manager = { version = "0.13.3", optional = true }
 
 # physics
-bevy_xpbd_2d = { version = "0.4", optional = true, default-features = false }
+avian2d = { version = "0.1", optional = true, default-features = false }
 
 # serialization
 bincode = { version = "2.0.0-rc.3", features = ["serde"] }
