--- a/examples/avian_physics/Cargo.toml
+++ b/examples/avian_physics/Cargo.toml
@@ -13,22 +13,22 @@ metrics = ["lightyear/metrics", "dep:metrics-exporter-prometheus"]
 lightyear_examples_common = { path = "../common" }
 bevy_screen_diagnostics = "0.6"
 leafwing-input-manager = "0.14"
-avian2d = { version = "0.1", features = ["serialize"] }
+avian2d = { version = "0.1", features = ["serialize", "enhanced-determinism"] }
 lightyear = { path = "../../lightyear", features = [
-  "webtransport",
-  "websocket",
-  "leafwing",
-  "avian2d",
-  "steam",
+    "webtransport",
+    "websocket",
+    "leafwing",
+    "avian2d",
+    "steam",
 ] }
 serde = { version = "1.0.188", features = ["derive"] }
 anyhow = { version = "1.0.75", features = [] }
 tracing = "0.1"
 tracing-subscriber = "0.3.17"
 bevy = { version = "0.14", features = [
-  "multi_threaded",
-  "bevy_state",
-  "serialize",
+    "multi_threaded",
+    "bevy_state",
+    "serialize",
 ] }
 
 rand = "0.8.1"
