Add example for determinism

--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -66,7 +66,8 @@ seahash = "4.1.0"
 leafwing-input-manager = { version = "0.14", optional = true }
 
 # physics
-avian2d = { version = "0.1.1", optional = true, default-features = false }
+avian2d = { git = "https://github.com/cBournhonesque/avian.git", branch = "cb/remove-order", optional = true, default-features = false }
+#avian2d = { version = "0.1.1", optional = true, default-features = false }
 
 # serialization
 bincode = { version = "2.0.0-rc.3", features = ["serde"] }
