--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -33,6 +33,7 @@ webtransport = [
 ]
 leafwing = ["dep:leafwing-input-manager"]
 avian2d = ["dep:avian2d"]
+avian3d = ["dep:avian3d", "avian3d/3d"]
 websocket = [
     "dep:tokio-tungstenite",
     "dep:futures-util",
@@ -67,6 +68,7 @@ leafwing-input-manager = { version = "0.14", optional = true }
 
 # physics
 avian2d = { version = "0.1.1", optional = true, default-features = false }
+avian3d = { version = "0.1.1", optional = true, default-features = false }
 
 # serialization
 bincode = { version = "2.0.0-rc.3", features = ["serde"] }
