--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -26,7 +26,7 @@ mock_time = ["dep:mock_instant"]
 webtransport = [
   "dep:wtransport",
   "dep:xwt-core",
-  "dep:xwt-web-sys",
+  "dep:xwt-web",
   "dep:web-sys",
   "dep:ring",
   "dep:wasm-bindgen-futures",
@@ -171,7 +171,7 @@ getrandom = { version = "0.2.11", features = [
   "js", # feature 'js' is required for wasm
 ] }
 xwt-core = { version = "0.5", optional = true }
-xwt-web-sys = { version = "0.13", optional = true }
+xwt-web = { version = "0.13.0", optional = true }
 wasm-bindgen = { version = "0.2.90", optional = true }
 wasm-bindgen-futures = { version = "0.4.42", optional = true }
 # compression
