--- a/examples/replication_groups/Cargo.toml
+++ b/examples/replication_groups/Cargo.toml
@@ -19,18 +19,18 @@ metrics = ["lightyear/metrics", "dep:metrics-exporter-prometheus"]
 [dependencies]
 lightyear_examples_common = { path = "../common" }
 lightyear = { path = "../../lightyear", features = [
-  "webtransport",
-  "websocket",
-  "steam",
+    "webtransport",
+    "websocket",
+    "steam",
 ] }
 serde = { version = "1.0", features = ["derive"] }
 anyhow = { version = "1.0", features = [] }
 tracing = "0.1"
 tracing-subscriber = "0.3.17"
-bevy = { version = "0.14", features = [
-  "multi_threaded",
-  "bevy_state",
-  "serialize",
+bevy = { version = "0.15.0-rc.3", features = [
+    "multi_threaded",
+    "bevy_state",
+    "serialize",
 ] }
 
 rand = "0.8.1"
