--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -17,28 +17,28 @@ exclude = ["/tests"]
 big_messages = []
 trace = []
 metrics = [
-  "dep:metrics",
-  "metrics-util",
-  "metrics-tracing-context",
-  "metrics-exporter-prometheus",
+    "dep:metrics",
+    "metrics-util",
+    "metrics-tracing-context",
+    "metrics-exporter-prometheus",
 ]
 mock_time = ["dep:mock_instant"]
 webtransport = [
-  "dep:wtransport",
-  "dep:xwt-core",
-  "dep:xwt-web",
-  "dep:web-sys",
-  "dep:wasm-bindgen-futures",
+    "dep:wtransport",
+    "dep:xwt-core",
+    "dep:xwt-web",
+    "dep:web-sys",
+    "dep:wasm-bindgen-futures",
 ]
 leafwing = ["dep:leafwing-input-manager"]
 avian2d = ["dep:avian2d"]
 avian3d = ["dep:avian3d", "avian3d/3d"]
 websocket = [
-  "dep:tokio-tungstenite",
-  "dep:futures-util",
-  "dep:web-sys",
-  "dep:wasm-bindgen",
-  "dep:wasm-bindgen-futures",
+    "dep:tokio-tungstenite",
+    "dep:futures-util",
+    "dep:web-sys",
+    "dep:wasm-bindgen",
+    "dep:wasm-bindgen-futures",
 ]
 steam = ["dep:steamworks"]
 
@@ -48,13 +48,13 @@ zstd = ["dep:zstd"]
 
 [dependencies]
 # utils
-chrono = "=0.4.34"
+chrono = "0.4.38"
 cfg-if = "1.0"
 enum_dispatch = "0.3"
 governor = "0.7.0"
-mock_instant = { version = "0.4.0", optional = true }
+mock_instant = { version = "0.5.1", optional = true }
 nonzero_ext = "0.3.0"
-parking_lot = "0.12.1"
+parking_lot = "0.12.3"
 paste = "1.0"
 rand = "0.8"
 ringbuffer = "0.15"
@@ -65,13 +65,13 @@ seahash = "4.1.0"
 leafwing-input-manager = { version = "0.15", default-features = false, optional = true }
 
 # physics
-avian2d = { version = "0.1.1", optional = true, default-features = false }
-avian3d = { version = "0.1.1", optional = true, default-features = false }
+avian2d = { version = "0.1.2", optional = true, default-features = false }
+avian3d = { version = "0.1.2", optional = true, default-features = false }
 
 # serialization
 bincode = { version = "2.0.0-rc.3", features = ["serde"] }
 byteorder = "1.5.0"
-bytes = { version = "1.5", features = ["serde"] }
+bytes = { version = "1.8", features = ["serde"] }
 self_cell = "1.0"
 serde = { version = "1", features = ["derive"] }
 
@@ -85,31 +85,31 @@ lightyear_macros = { version = "0.17.0", path = "../macros" }
 tracing = "0.1.40"
 tracing-log = "0.2.0"
 tracing-subscriber = { version = "0.3.17", features = [
-  "registry",
-  "env-filter",
+    "registry",
+    "env-filter",
 ] }
 
 # server
-crossbeam-channel = { version = "0.5.8", features = [] }
+crossbeam-channel = { version = "0.5.13", features = [] }
 
 # metrics
 metrics = { version = "0.24", optional = true }
 metrics-util = { version = "0.18", optional = true }
 metrics-tracing-context = { version = "0.17", optional = true }
 metrics-exporter-prometheus = { version = "0.15.1", optional = true, default-features = false, features = [
-  "http-listener",
+    "http-listener",
 ] }
 
 # bevy
 bevy = { version = "0.14", default-features = false, features = [
-  "multi_threaded",
-  "bevy_state",
-  "serialize",
+    "multi_threaded",
+    "bevy_state",
+    "serialize",
 ] }
 
 # compression
 lz4_flex = { version = "0.11", optional = true, default-features = false, features = [
-  "std",
+    "std",
 ] }
 
 # WebSocket
@@ -118,8 +118,8 @@ futures-util = { version = "0.3.30", optional = true }
 # transport
 # we don't need any tokio features, we use only use the tokio channels
 tokio = { version = "1.36", features = [
-  "sync",
-  "macros",
+    "sync",
+    "macros",
 ], default-features = false }
 futures = "0.3.30"
 async-compat = "0.2.3"
@@ -131,14 +131,14 @@ async-channel = "2.2.0"
 steamworks = { version = "0.11", optional = true }
 # webtransport
 wtransport = { version = "=0.5.0", optional = true, features = [
-  "quinn",
-  "self-signed",
-  "dangerous-configuration",
+    "quinn",
+    "self-signed",
+    "dangerous-configuration",
 ] }
 # websocket
 tokio-tungstenite = { version = "0.23.0", optional = true, features = [
-  "connect",
-  "handshake",
+    "connect",
+    "handshake",
 ] }
 # compression
 zstd = { version = "0.13.1", optional = true }
@@ -146,26 +146,26 @@ zstd = { version = "0.13.1", optional = true }
 [target."cfg(target_family = \"wasm\")".dependencies]
 console_error_panic_hook = { version = "0.1.7" }
 web-sys = { version = "0.3", optional = true, features = [
-  "Document",
-  "WebTransport",
-  "WebTransportHash",
-  "WebTransportOptions",
-  "WebTransportBidirectionalStream",
-  "WebTransportSendStream",
-  "WebTransportReceiveStream",
-  "ReadableStreamDefaultReader",
-  "WritableStreamDefaultWriter",
-  "WebTransportDatagramDuplexStream",
-  "WebSocket",
-  "CloseEvent",
-  "ErrorEvent",
-  "MessageEvent",
-  "BinaryType",
+    "Document",
+    "WebTransport",
+    "WebTransportHash",
+    "WebTransportOptions",
+    "WebTransportBidirectionalStream",
+    "WebTransportSendStream",
+    "WebTransportReceiveStream",
+    "ReadableStreamDefaultReader",
+    "WritableStreamDefaultWriter",
+    "WebTransportDatagramDuplexStream",
+    "WebSocket",
+    "CloseEvent",
+    "ErrorEvent",
+    "MessageEvent",
+    "BinaryType",
 ] }
 bevy_web_keepalive = "0.3"
 futures-lite = { version = "2.1.0", optional = true }
 getrandom = { version = "0.2.11", features = [
-  "js", # feature 'js' is required for wasm
+    "js", # feature 'js' is required for wasm
 ] }
 xwt-core = { version = "0.5", optional = true }
 xwt-web = { version = "0.13.0", optional = true }
