--- a/examples/common/Cargo.toml
+++ b/examples/common/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lightyear_examples_common"
-version = "0.17.0"
+version = "0.18.0"
 authors = ["Charles Bournhonesque <charlesbour@gmail.com>"]
 edition = "2021"
 rust-version = "1.76"
@@ -13,7 +13,7 @@ license = "MIT OR Apache-2.0"
 exclude = ["/tests"]
 
 [dependencies]
-lightyear = { version = "0.17.0", path = "../../lightyear", features = [
+lightyear = { version = "0.18.0", path = "../../lightyear", features = [
     "steam",
     "webtransport",
     "websocket",
@@ -29,7 +29,7 @@ rand = "0.8.5"
 serde = { version = "1.0.201", features = ["derive"] }
 
 # bevy
-bevy = { version = "0.15.0-rc.3", default-features = true, features = [
+bevy = { version = "0.15.0", default-features = true, features = [
     "multi_threaded",
     "bevy_state",
     "serialize",
