--- a/benches/Cargo.toml
+++ b/benches/Cargo.toml
@@ -17,7 +17,7 @@ pprof = { version = "0.14.0", features = ["flamegraph", "frame-pointer"] }
 lightyear = { path = "../lightyear" }
 criterion = { version = "0.5", features = ["html_reports"] }
 crossbeam-channel = "0.5.10"
-bevy = { version = "0.15.0-rc.3", default-features = true, features = [
+bevy = { version = "0.15.0", default-features = true, features = [
     "bevy_core_pipeline",
     "multi_threaded",
     "bevy_state",
