--- a/examples/auth/Cargo.toml
+++ b/examples/auth/Cargo.toml
@@ -27,7 +27,7 @@ serde = { version = "1.0.188", features = ["derive"] }
 anyhow = { version = "1.0.75", features = [] }
 tracing = "0.1"
 tracing-subscriber = "0.3.17"
-bevy = { version = "0.15.0-rc.3", features = [
+bevy = { version = "0.15.0", features = [
     "multi_threaded",
     "bevy_state",
     "serialize",
