--- a/examples/simple_setup/Cargo.toml
+++ b/examples/simple_setup/Cargo.toml
@@ -16,7 +16,7 @@ publish = false
 lightyear = { path = "../../lightyear" }
 serde = { version = "1.0", features = ["derive"] }
 clap = { version = "4.5", features = ["derive"] }
-bevy = { version = "0.15.0-rc.3", features = [
+bevy = { version = "0.15.0", features = [
     "multi_threaded",
     "bevy_state",
     "serialize",
