--- a/examples/spaceships/Cargo.toml
+++ b/examples/spaceships/Cargo.toml
@@ -10,6 +10,8 @@ publish = false
 
 [features]
 default = [
+    "client",
+    "server",
     "lightyear_examples_common/steam",
     "lightyear_examples_common/websocket"
 ]
