--- a/examples/avian_3d_character/Cargo.toml
+++ b/examples/avian_3d_character/Cargo.toml
@@ -6,11 +6,11 @@ edition = "2021"
 publish = false
 
 [features]
-default = ["server", "client"]
-gui = ["lightyear_examples_common/gui", "dep:bevy_screen_diagnostics"]
+default = ["lightyear_examples_common/websocket"]
 client = ["lightyear_examples_common/client", "gui"]
-tls = ["dep:bevygap_client_plugin"]
 server = ["lightyear_examples_common/server"]
+gui = ["lightyear_examples_common/gui"]
+tls = ["dep:bevygap_client_plugin"]
 metrics = ["lightyear/metrics", "dep:metrics-exporter-prometheus"]
 bevygap_client = ["lightyear_examples_common/bevygap_client", "client"]
 bevygap_server = ["lightyear_examples_common/bevygap_server", "server"]
@@ -18,19 +18,19 @@ bevygap_server = ["lightyear_examples_common/bevygap_server", "server"]
 [dependencies]
 lightyear_examples_common.workspace = true
 lightyear = { workspace = true, features = [
-  "leafwing",
-  "avian3d",
-  "websocket",
+    "leafwing",
+    "avian3d",
+    "websocket",
 ] }
 leafwing-input-manager.workspace = true
 
 bevy_screen_diagnostics = { workspace = true, optional = true }
 avian3d = { workspace = true, features = [
-  "3d",
-  "f32",
-  "parry-f32",
-  "parallel",
-  "serialize",
+    "3d",
+    "f32",
+    "parry-f32",
+    "parallel",
+    "serialize",
 ] }
 serde.workspace = true
 anyhow.workspace = true
@@ -40,7 +40,7 @@ bevy.workspace = true
 rand.workspace = true
 metrics-exporter-prometheus = { workspace = true, optional = true }
 bevygap_client_plugin = { workspace = true, optional = true, features = [
-  "matchmaker-tls",
+    "matchmaker-tls",
 ] }
 
 [lints]
