--- a/examples/simple_setup/Cargo.toml
+++ b/examples/simple_setup/Cargo.toml
@@ -13,10 +13,11 @@ publish = false
 
 [features]
 gui = [
-    "bevy/bevy_render",
-    "bevy/bevy_core_pipeline",
-    "bevy/bevy_winit",
-    "bevy/bevy_window"]
+  "bevy/bevy_render",
+  "bevy/bevy_core_pipeline",
+  "bevy/bevy_winit",
+  "bevy/bevy_window",
+]
 client = ["gui"]
 server = []
 
