--- a/examples/spaceships/Cargo.toml
+++ b/examples/spaceships/Cargo.toml
@@ -2,26 +2,17 @@
 name = "spaceships"
 version.workspace = true
 authors = [
-    "Charles Bournhonesque <charlesbour@gmail.com>",
-    "Richard Jones <rj@metabrew.com>",
+  "Charles Bournhonesque <charlesbour@gmail.com>",
+  "Richard Jones <rj@metabrew.com>",
 ]
 edition.workspace = true
 publish = false
 
 [features]
-default = [
-    "lightyear_examples_common/websocket"
-]
-client = [
-    "lightyear_examples_common/client",
-    "gui",
-]
-server = [
-    "lightyear_examples_common/server"
-]
-gui = [
-    "lightyear_examples_common/gui"
-]
+default = ["lightyear_examples_common/websocket"]
+client = ["lightyear_examples_common/client", "gui"]
+server = ["lightyear_examples_common/server"]
+gui = ["lightyear_examples_common/gui"]
 metrics = ["lightyear/metrics", "dep:metrics-exporter-prometheus"]
 tls = ["dep:bevygap_client_plugin"]
 bevygap_client = ["lightyear_examples_common/bevygap_client", "client"]
@@ -32,11 +23,11 @@ lightyear_examples_common.workspace = true
 metrics-exporter-prometheus = { workspace = true, optional = true }
 leafwing-input-manager = { workspace = true, features = ["keyboard", "mouse"] }
 avian2d = { workspace = true, features = [
-    "2d",
-    "f32",
-    "parry-f32",
-    "parallel",
-    "serialize",
+  "2d",
+  "f32",
+  "parry-f32",
+  "parallel",
+  "serialize",
 ] }
 lightyear = { workspace = true, features = ["leafwing", "avian2d"] }
 serde.workspace = true
@@ -46,7 +37,7 @@ tracing-subscriber.workspace = true
 bevy.workspace = true
 rand.workspace = true
 bevygap_client_plugin = { workspace = true, optional = true, features = [
-    "matchmaker-tls",
+  "matchmaker-tls",
 ] }
 
 [lints]
